--- a/views/topografia.hbs
+++ b/views/topografia.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{titulo}}</title>
 
-    <link rel="stylesheet" href="/css/proyectos.css">
+    <link rel="stylesheet" href="../assets/css/proyectos.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,14 +17,14 @@
 </head>
 <body>
 
-    <section id="facilities">
+     <div class="jumbotron jumbotron-fluid" style="background: #CDBBAB;">
         <div class="container">
-            <div class="titulo">
-                <h1>Topografia</h1>
-                <h3>Relevamientos - Amojonamiento - Replanteos - Control de movimiento de suelos - Control de acopios - Perfiles tipo - Perfiles transversales</h3>
-                <h4>Civil 3D</h4>
-            </div>
-
+            <h1 class="display-3">Topografia</h1>
+            <p class="lead">Relevamientos - Amojonamiento - Replanteos - Control de movimiento de suelos - Control de acopios - Perfiles tipo - Perfiles transversales</p>
+            <p class="lead">Civil 3D</p>
+        </div>
+      </div>
+    <section id="facilities">
             <section class="container justify justify-content-center p-5">
                 <div class="row lg justify-content-center ">
                   <div class="col-sm-12 col-md-6 col-lg-5">
@@ -151,7 +151,14 @@
 
     </div>
 
+<style>
+    body {
+  background-image: url("../assets/img/countours.png");
+}
+</style>
+
             
 
 
 </body>
+</html>
