--- a/views/contacto.hbs
+++ b/views/contacto.hbs
@@ -4,35 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <title>{{titulo}}</title>
+    <link href="../assets/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="../assets/css/custom.css">
 
 </head>
 <body>
-    <section class="container">
-    <h1> Contacto</h1>
-        <form action="/send-email" method="post">
+
+
+<div class="jumbotron jumbotron-fluid" style="background: #CDBBAB;">
+    <div class="container">
+        <h1 class="display-3">Contactenos</h1>
+        <p class="lead">Cualquier consulta será bien recibida, no dude en consultarnos.</p>
+
+    </div>
+
+</div>    
+    <section class="container justify justify-content-center p-5" style="background-image: url('/assets/img/repeating-triangles.svg');">
+
+        <form action="/send-email" method="post" onsubmit="return validarFormulario()">
         <div class="mb-3">
-            <input type="text" class="form-control" name ="nombre" placeholder="Ingresá tu nombre">
+            <label for="nombre" class="form-label">
+                <span>Nombre</span>
+            </label>
+            <input id="nombre" type="text" class="form-control" name ="nombre" placeholder="Ingresá tu nombre">
         </div> 
         <div class="mb-3">
-            <input type="text" class="form-control" name ="apellido" placeholder="Ingresá tu apellido">
+            <label for="apellido" class="form-label">
+                <span>Apellido</span>
+            </label>
+            <input id="apellido" type="text" class="form-control" name ="apellido" placeholder="Ingresá tu apellido">
         </div> 
         <div class="mb-3">
-        <input type="email" class="form-control" name="email" placeholder="Ingresá tu email">
-        </div> 
-            <div class="mb-3">
-            <input type="text" class="form-control" name ="asunto" placeholder="Escribí tu asunto">
-        </div> 
-        <div class="mb-3">
-        <textarea name="mensaje" id="" class="form-control" cols="30" rows="10"></textarea>
+            <label for="correo" class="form-label">
+                <span>Correo electrónico</span>
+            </label>
+        <input id="correo" type="correo" class="form-control" name="correo" placeholder="Ingresá tu Correo">
         </div>
-        <button class="btn btn-primary"> Enviar</button>
+        <label for="celular" class="form-label">
+                <span>Celular</span>
+        </label>
+        <div class="mb-3">
+            <input id="celular" type="tel" class="form-control" name ="celular" maxlength="11" placeholder="Escribí tu Celular">
+        </div> 
+        <div class="mb-3">
+            <label for="consulta" class="form-label">
+                <span>consulta:</span>
+            </label>
+        <textarea name="consulta" id="consulta" class="form-control" cols="30" rows="10"></textarea>
+        </div>
+        <button class="btn btn-dark"> Enviar</button>
     </form>
     </section>
+   
 </body>
 
-<script src="/assets/js/jquery-3.3.1.js"></script>
-<script src="/assets/js/bootstrap.js"></script>
+<style>
+    body {
+  background-image: url("../assets/img/countours.png");
+}
+</style>
+
+<script src="../assets/js/jquery-3.3.1.js"></script>
+<script src="../assets/js/bootstrap.js"></script>
+<script src="../assets/js/form1.js"></script>
 
 </html>
