--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,20 +1,50 @@
-<footer>
-      <div class="footer-basic">
-        
-            <div class="social"><a href="https://www.instagram.com/borga_89/?hl=es"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borga_89"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/ezequiel.borgarello/"><i class="icon ion-social-facebook"></i></a></div>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="home">Home</a></li>
-                <li class="list-inline-item"><a href="quienes_somos">Quienes somos</a></li>
-                <li class="list-inline-item"><a href="form">Contactenos</a></li>
-                <li class="list-inline-item"><a href="#">Servicios</a></li>
-            </ul>
+<footer class="bg-secondary text-white py-4">
+      <div class="contanier">
+            <nav class="row">
+                  <!--logo-->
+                  <a href="" class="col-3 text-reset text-uppercase d-flex align-items-center">
+                        <img src="../assets/img/logotipo.jpg" alt="Borga" class="logotipo">
+                  </a>
+                  <!--menu-->
+                  <ul class="col-3 list-unstyled">
+                        <li class="font-weight-bold text-uppercase">Recursos</li>
+                        <li><a href="home" class="text-reset">Home</a></li>
+                        <li><a href="quienes_somos" class="text-reset">Quienes somos</a></li>
+                        <li><a href="contacto" class="text-reset">Contactenos</a></li>
+                  </ul>
+                   <!--menu-->
+                  <ul class="col-3 list-unstyled">
+                        <li class="font-weight-bold text-uppercase">Servicios</li>
+                        <li><a href="topografia" class="text-reset">Topografia</a></li>
+                        <li><a href="proyectos" class="text-reset">Construccion</a></li>
+                        <li><a href="temario-cursos" class="text-reset">Cursos</a></li>
+                  </ul>
+
+                  <!--social nettwork-->
+                  <ul class="col-3 list-unstyled">
+                        <li class="font-weight-bold text-uppercase">Redes Sociales</li>
+                        <li class="d-flex justify content-between">
+                              <!--facebbok-->
+                              <a href="https://www.facebook.com/ezequiel.borgarello/" class="text-reset"><i class="fab fa-facebook-f"></i></a>
+                              <!--twitter-->
+                              <a href="https://twitter.com/borga_89" class="text-reset"><i class="fab fa-twitter"></i></a>
+                              <!--instagram-->
+                              <a href="https://www.instagram.com/borga_89/?hl=es0_.lu" class="text-reset"><i class="fab fa-instagram"></i></a>
+                        </li>
+
+
+                        
+                  </ul>
+
+
+
+
+            </nav>
       </div>
-    </footer>
+      
+      
+</footer>
 
   
     
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    
