--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
-
+<header>
   
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid justify-content-center">
@@ -17,7 +17,7 @@
               <a class="nav-link" href="quienes_somos">Quienes somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="form">Contactenos</a>
+              <a class="nav-link" href="contacto">Contactenos</a>
             </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -33,16 +33,19 @@
           </ul>
 
            <!-- redes sociales-->
+          
+            <div class="footer-basic">
+              <div class="social">
+                <ul>
+                  <li><a href="https://www.instagram.com/borga_89/?hl=es0_.lu"><i class="icon ion-social-instagram"></i></a></li>
+                  <li><a href="https://twitter.com/borga_89"><i class="icon ion-social-twitter"></i></a></li>
+                  <li><a href="https://www.facebook.com/ezequiel.borgarello/"><i class="icon ion-social-facebook"></i></a></li>
+                  <li><a href="https://api.whatsapp.com/send?phone=+5491156227959&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20." class="float" target="_blank"><i class="fa fa-whatsapp my-float"></i></a></li>
+                </ul>
+              </div>
+            </div>
 
-          <div class="footer-basic">
-            <ul>
-              <div class="social"><a href="https://www.instagram.com/borga_89/?hl=es0_.lu"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borga_89"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/ezequiel.borgarello/"><i class="icon ion-social-facebook"></i></a><a href="https://api.whatsapp.com/send?phone=+5491156227959&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20." class="float" target="_blank">
-                <i class="fa fa-whatsapp my-float"></i>
-                </a>
-              </div> 
-            </ul>
-
-        </div>
+          
           
         </div>
       </div>
