--- a/views/proy-calle30y5.hbs
+++ b/views/proy-calle30y5.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
 
-    <link rel="stylesheet" href="/css/proyectos.css">
+    <link rel="stylesheet" href="../assets/css/proyectos.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,14 +16,16 @@
     
 </head>
 <body>
-
-    <section id="facilities">
+  <div class="jumbotron jumbotron-fluid" style="background: #CDBBAB;">
+    
         <div class="container">
-            <div class="titulo">
-                <h1>Departamentos - Calle 30 y 5</h1>
-            </div>
+            <h1 class="display-3">Departamentos</h1>
+            <p class="lead">Calle 30 y 5</p>   
+        </div>
+  </div>
 
-            <section class="container justify justify-content-center p-5">
+<section id="facilities">
+            <section class="container justify justify-content-center p-5" style="background-image: url('/assets/img/repeating-triangles.svg');">
                 <div class="row lg justify-content-center ">
                   <div class="col-sm-12 col-md-6 col-lg-5">
                     
@@ -70,7 +72,7 @@
             </div>
               
               </div>
-              <br>
+            
               
           
           
@@ -83,6 +85,12 @@
 
 
         </div>
+
+<style>
+    body {
+  background-image: url("../assets/img/countours.png");
+}
+</style>
 
             
 
