--- a/views/quienes_somos.hbs
+++ b/views/quienes_somos.hbs
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{titulo}}</title>
 
-    <link rel="stylesheet" href="/css/quienes_somos.css">
+    <link rel="stylesheet" href="../assets/css/custom.css">
+
+    <link rel="stylesheet" href="../assets/css/quienes_somos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 
@@ -19,6 +21,7 @@
 <body>
 
 <!--header-->
+{{> header}}
    
 
 
@@ -32,6 +35,8 @@
     </section>
 
     <!--footer-->
+
+    {{> footer}}
 
 
 </body>
