--- a/views/temario-cursos.hbs
+++ b/views/temario-cursos.hbs
@@ -84,7 +84,7 @@ data-preference-id="40249755-371d7a0e-5255-4662-b914-f8269ae6b477" data-source="
         <div class="row justify-content-md-center" style="background: lightblue">
                 <div class="col-md"><h5> Producto ID</h5></div>
                 <div class="col-md"><h5>Producto nombre</h5></div>
-                <div class="col-md"><h5>Precio (efectivo</h5></div>
+                <div class="col-md"><h5>Precio (efectivo"</h5></div>
                 <div class="col-md"><h5>Accion</h5></div>
             </div>
             <div class="row justify-content-md-center" style="background: lightblue">
